@@ -13,6 +13,7 @@
 * Gravatar is configurable.
 * #103: Drafts are saved on force close or quit by default.
 * C-v: duplicate and refine query.
+* Use state-less queries in thread-index
 
 == v0.5 / 2016-02-06
 
